_initial-setup/patches/cilium-l2/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-system-http
  namespace: kube-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - hubble.apps.example.com
  rules:
  - matches:
    - path:	
        type: PathPrefix	
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: hubble-ui
      port: 80
      weight: 1
